# OAIP_Labs-

./: CMakeLists.txt  README.md  sonar-project.properties  Без названия.htm
LAB3SEMBMP/: CMakeLists.txt
LABA2Com/: header.h  main.c
LABA2Dec/: CMakeLists.txt  header.h
LABS(2-3)/LAB3SEMBMP/: functions.c  header.h  main.c
LABS(2-3)/LABA2Com/: CMakeLists.txt
LABS(2-3)/LABA2Dec/: functions.c
src/LAB1Sem2/: functions.c  header.h  main.c
src/LAB3SEMBMP/: functions.c  header.h  main.c
src/LAB4SEM2/: CMakeLists.txt  data.txt  functions.c  header.h  main.c
src/LABA2Com/: CMakeLists.txt  functions.c  header.h  main.c
src/LABA2Dec/: main.c
src/lab5/: CMakeLists.txt  dns_table.txt  functions.c  header.h  main.c
лаба 1.1/: Lab.1.sln  Lab.1.vcxproj  Lab.1.vcxproj.filters  Laba1.1.c
лаба 1.1/x64/Debug/: Lab.1.exe.recipe  Lab.1.ilk  Lab.1.vcxproj.FileListAbsolute.txt  vc143.idb
лаба 1.1/x64/Debug/Lab.1.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+5 more)
лаба 1.2/: Project1.vcxproj  Source. ЛАБ РАБ1 ЗАДАЧА 2.c  Source.c  ЛАБ РАБ№1 ЗАДАНИЕ№2(12).sln
лаба 1.2/x64/Debug/: Project1.exe.recipe  Project1.ilk  Project1.vcxproj.FileListAbsolute.txt  vc143.idb
лаба 1.3/: ЛАБА1.3  ЛАБА1.3.c  лаба 1.3.sln  лаба 1.3.vcxproj  лаба 1.3.vcxproj.filters
лаба 1.3/x64/Debug/: vc143.idb  лаба 1.3.exe.recipe  лаба 1.3.ilk  лаба 1.3.vcxproj.FileListAbsolute.txt
лаба1.4/: Laba1.4(VER3).c  Laba1.4(VER3).sln  Laba1.4(VER3).vcxproj  Laba1.4(VER3).vcxproj.filters
лаба1.4/x64/Debug/: Laba1.4(VER3).exe.recipe  Laba1.4(VER3).ilk  Laba1.4(VER3).vcxproj.FileListAbsolute.txt  vc143.idb
(+21 files in other folders)
