cmake_minimum_required(VERSION 3.23)
project(OAIP_Labs- C)

set(CMAKE_C_STANDARD 99)

add_executable(OAIP_Labs- src/LAB1Sem2/main.c src/LAB1Sem2/header.h src/LAB1Sem2/functions.c)
add_executable(OAIP_Labs- src/LABA2Com/main.c src/LABA2Com/header.h src/LABA2Com/functions.c)
add_executable(OAIP_Labs- src/LABA2Dec/main.c src/LABA2Dec/header.h src/LABA2Dec/functions.c)
